--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- JS -->
-    <script src="/src/js/main.js" defer></script>
+    <script src="/js/main.js" defer></script>
 
     <!-- Google Fonts -->
     <link
@@ -14,25 +14,25 @@
     />
 
     <!-- Link to compiled CSS -->
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!-- favicon -->
     <link
       rel="icon"
-      href="/public/favicon-16.png"
+      href="/images/favicon-16.png"
       sizes="16x16"
       type="image/png"
     />
     <link
       rel="icon"
-      href="/public/favicon-32.png"
+      href="/images/favicon-32.png"
       sizes="32x32"
       type="image/png"
     />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
-      href="/public/apple-touch-icon.png"
+      href="/images/apple-touch-icon.png"
     />
 
     <!-- SEO-->
@@ -72,7 +72,7 @@
       <section id="main">
         <div class="banner">
           <img
-            src="/src/images/logo-terapia-cura-emocional.webp"
+            src="/images/logo-terapia-cura-emocional.webp"
             alt="Logo da Terapia Cura Emocional"
           />
         </div>
@@ -86,7 +86,7 @@
           </div>
           <div class="terapeuta">
             <img
-              src="/src/images/Mutisia Profile EFTclub.webp"
+              src="/images/Mutisia-Profile-EFTclub.webp"
               alt="Foto da terapeuta Mutisia"
             />
             <p>Terapeuta Mutisia</p>
@@ -97,7 +97,7 @@
                   href="https://wa.me/5521920172600"
                   target="_blank"
                 >
-                  <img src="/src/images/whatsapp-icon.svg" alt="" />
+                  <img src="/images/whatsapp-icon.svg" alt="" />
                 </a>
               </li>
               <li>
@@ -106,7 +106,7 @@
                   href="https://www.instagram.com/eftclub_terapias/"
                   target="_blank"
                 >
-                  <img src="/src/images/instagram-icon.svg" alt="" />
+                  <img src="/images/instagram-icon.svg" alt="" />
                 </a>
               </li>
               <li>
@@ -115,7 +115,7 @@
                   href="https://www.tiktok.com/@eftclub"
                   target="_blank"
                 >
-                  <img src="/src/images/tiktok-icon.svg" alt="" />
+                  <img src="/images/tiktok-icon.svg" alt="" />
                 </a>
               </li>
             </ul>
@@ -130,19 +130,19 @@
         <h2>Terapia especializada em:</h2>
         <ul>
           <li>
-            <img src="/src/images/icon_gradient-circle.svg" alt="" />
+            <img src="/images/icon_gradient-circle.svg" alt="" />
             <span>ansiedade</span>
           </li>
           <li>
-            <img src="/src/images/icon_gradient-circle.svg" alt="" />
+            <img src="/images/icon_gradient-circle.svg" alt="" />
             <span>depressão</span>
           </li>
           <li>
-            <img src="/src/images/icon_gradient-circle.svg" alt="" />
+            <img src="/images/icon_gradient-circle.svg" alt="" />
             <span>Traumas</span>
           </li>
           <li>
-            <img src="/src/images/icon_gradient-circle.svg" alt="" />
+            <img src="/images/icon_gradient-circle.svg" alt="" />
             <span>Entre outros</span>
           </li>
         </ul>
@@ -164,7 +164,13 @@
           Saiba mais sobre o processo terapêutico e as técnicas utilizadas:
         </p>
         <ul>
-          <li><a href="" class="btn btn_border">EFT</a></li>
+          <li>
+            <a
+              href="/blog/passo-a-passo-de-como-aplicar-a-tecnica-de-liberacao-emocional-eft/index.html"
+              class="btn btn_border"
+              >EFT</a
+            >
+          </li>
           <li><a href="" class="btn btn_border">Processo Terapêutico</a></li>
           <li><a href="" class="btn btn_border">TRG</a></li>
         </ul>
@@ -185,7 +191,7 @@
               <li>
                 <img
                   loading="lazy"
-                  src="/src/images/five-stars-eftclub.svg"
+                  src="/images/five-stars-eftclub.svg"
                   alt="Avaliação de cinco estrelas"
                 />
               </li>
@@ -200,7 +206,7 @@
               loading="lazy"
               width="900"
               height="auto"
-              src="/src/images/Registro-Profissional-ABRATH.webp"
+              src="/images/Registro-Profissional-ABRATH.webp"
               alt="Selo de registro profissional na Associação Brasileira dos Terapeutas Holísticos"
           /></a>
           <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
@@ -213,7 +219,7 @@
             width="900"
             height="auto"
             class="open-button"
-            src="/src/images/Avalicoes-do-Google.webp"
+            src="/images/Avalicoes-do-Google.webp"
             alt="Captura de tela com três avaliações positivas no Google sobre a terapeuta Mutisia. As avaliações são de Vera, Nayany e Nayara. Vera comenta que se sente mais leve e recomenda muito a terapeuta. Nayany descreve como o acompanhamento com Mutisia a ajudou a transformar sua visão da vida e curar sua criança interior, expressando gratidão. Nayara diz que a técnica é impressionante e relata mudanças significativas em comparação com a terapia convencional. Todas as avaliações exibem nota máxima de cinco estrelas."
           />
           <a class="btn btn_border open-button">Ler mais depoimentos</a>
@@ -225,7 +231,7 @@
           <ul>
             <li>
               <img
-                src="/src/images/Depoimentos/depoimento-eftclub-aleksandra.webp"
+                src="/images/Depoimentos/depoimento-eftclub-aleksandra.webp"
                 alt="Aleksandra, 5 estrelas (2 anos atrás): experiência ímpar com EFT, processo de cura profundo, gratidão"
                 loading="lazy"
                 width="300"
@@ -234,7 +240,7 @@
             </li>
             <li>
               <img
-                src="/src/images/Depoimentos/depoimento-eftclub-andressa.webp"
+                src="/images/Depoimentos/depoimento-eftclub-andressa.webp"
                 alt="Andressa, 5 estrelas (2 anos atrás): lembra memórias que fazem todo sentido, gratidão"
                 loading="lazy"
                 width="300"
@@ -243,7 +249,7 @@
             </li>
             <li>
               <img
-                src="/src/images/Depoimentos/depoimento-eftclub-elisangela.webp"
+                src="/images/Depoimentos/depoimento-eftclub-elisangela.webp"
                 alt="Elisangela, 5 estrelas (1 mês atrás): maravilhosaaaa, entendi minha criança interior, profissional nota 1000, super indico"
                 loading="lazy"
                 width="300"
@@ -252,7 +258,7 @@
             </li>
             <li>
               <img
-                src="/src/images/Depoimentos/depoimento-eftclub-lisandra.webp"
+                src="/images/Depoimentos/depoimento-eftclub-lisandra.webp"
                 alt="Lisandra, 5 estrelas (2 anos atrás): super atenciosa, me senti muito à vontade, parabéns pelo trabalho"
                 loading="lazy"
                 width="300"
@@ -261,7 +267,7 @@
             </li>
             <li>
               <img
-                src="/src/images/Depoimentos/depoimento-eftclub-nayany.webp"
+                src="/images/Depoimentos/depoimento-eftclub-nayany.webp"
                 alt="Nayany, 5 estrelas (1 ano atrás): mudou minha visão, curou minha criança interior, encontrei paz interior, gratidão"
                 loading="lazy"
                 width="300"
@@ -270,7 +276,7 @@
             </li>
             <li>
               <img
-                src="/src/images/Depoimentos/depoimento-eftclub-nayara.webp"
+                src="/images/Depoimentos/depoimento-eftclub-nayara.webp"
                 alt="Nayara, 5 estrelas (11 meses atrás): técnica impressionante, mudanças significativas comparadas à terapia convencional"
                 loading="lazy"
                 width="300"
@@ -279,7 +285,7 @@
             </li>
             <li>
               <img
-                src="/src/images/Depoimentos/depoimento-eftclub-poliana.webp"
+                src="/images/Depoimentos/depoimento-eftclub-poliana.webp"
                 alt="Poliana, 5 estrelas (1 ano atrás): experiência maravilhosa, me senti acolhida e compreendida ❤️🙌"
                 loading="lazy"
                 width="300"
@@ -288,7 +294,7 @@
             </li>
             <li>
               <img
-                src="/src/images/Depoimentos/depoimento-eftclub-rogelio.webp"
+                src="/images/Depoimentos/depoimento-eftclub-rogelio.webp"
                 alt="Rogelio, 5 estrelas (1 mês atrás): em 1 mês de EFT me sinto leve e com paz, Muti é maravilhosa"
                 loading="lazy"
                 width="300"
@@ -297,7 +303,7 @@
             </li>
             <li>
               <img
-                src="/src/images/Depoimentos/depoimento-eftclub-sheila.webp"
+                src="/images/Depoimentos/depoimento-eftclub-sheila.webp"
                 alt="Sheila, 5 estrelas (1 ano atrás): super acolhida, questões esclarecidas de forma clara e objetiva, super recomendo 😊"
                 loading="lazy"
                 width="300"
@@ -306,7 +312,7 @@
             </li>
             <li>
               <img
-                src="/src/images/Depoimentos/depoimento-eftclub-vera.webp"
+                src="/images/Depoimentos/depoimento-eftclub-vera.webp"
                 alt="Vera, 5 estrelas (9 meses atrás): libertador, hoje me sinto leve, bagagem pesada ficou no passado, recomendo super"
                 loading="lazy"
                 width="300"
@@ -327,19 +333,19 @@
           <h3>Adquirindo Uma Sessão por Vez</h3>
           <ul class="benefits-list">
             <li>
-              <img src="/src/images/icon_mark.svg" alt="" />
+              <img src="/images/icon_mark.svg" alt="" />
               <span>Terapia online por videoconferência.</span>
             </li>
             <li>
-              <img src="/src/images/icon_mark.svg" alt="" />
+              <img src="/images/icon_mark.svg" alt="" />
               <span>Sessões com duração de 1h a 1h30.</span>
             </li>
             <li>
-              <img src="/src/images/icon_mark.svg" alt="" />
+              <img src="/images/icon_mark.svg" alt="" />
               <span>Anamnese e aplicação de técnicas alternativas.*</span>
             </li>
             <li>
-              <img src="/src/images/icon_mark.svg" alt="" />
+              <img src="/images/icon_mark.svg" alt="" />
               <span>
                 Suporte contínuo pelo WhatsApp para tirar dúvidas em qualquer
                 momento do processo.
@@ -364,11 +370,11 @@
           <h3>Adquirindo Um Pacote de Quatro Sessões</h3>
           <ul>
             <li>
-              <img src="/src/images/icon_mark.svg" alt="" />
+              <img src="/images/icon_mark.svg" alt="" />
               <span>Tudo do anterior</span>
             </li>
             <li>
-              <img src="/src/images/icon_filled-mark.svg" alt="" />
+              <img src="/images/icon_filled-mark.svg" alt="" />
               <span>18% de desconto</span>
             </li>
           </ul>
@@ -415,7 +421,7 @@
                   class="img_link"
                   href="https://www.tiktok.com/@eftclub"
                   target="_blank"
-                  ><img src="/src/images/tiktok-icon.svg" alt=""
+                  ><img src="/images/tiktok-icon.svg" alt=""
                 /></a>
               </li>
               <li>
@@ -423,7 +429,7 @@
                   class="img_link"
                   href="https://www.youtube.com/@eftclub/"
                   target="_blank"
-                  ><img src="/src/images/youtube-icon.svg" alt=""
+                  ><img src="/images/youtube-icon.svg" alt=""
                 /></a>
               </li>
               <li>
@@ -431,7 +437,7 @@
                   class="img_link"
                   href="https://www.instagram.com/eftclub_terapias/"
                   target="_blank"
-                  ><img src="/src/images/instagram-icon.svg" alt=""
+                  ><img src="/images/instagram-icon.svg" alt=""
                 /></a>
               </li>
               <li>
@@ -439,7 +445,7 @@
                   class="img_link"
                   href="https://www.facebook.com/profile.php?id=100080437803652"
                   target="_blank"
-                  ><img src="/src/images/facebook-icon.svg" alt=""
+                  ><img src="/images/facebook-icon.svg" alt=""
                 /></a>
               </li>
             </ul>
@@ -455,7 +461,7 @@
               loading="lazy"
               width="512"
               height="auto"
-              src="/src/images/logo-eftclub.webp"
+              src="/images/logo-eftclub.webp"
               alt=""
             />
           </section>
